--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # Production - This will be set in Vercel dashboard
-VITE_API_URL=https://your-backend-url.onrender.com/api
+VITE_API_URL=https://steamsurf.onrender.com/api
